readme file created

--- a/neighborapp/templates/index.html
+++ b/neighborapp/templates/index.html
@@ -54,6 +54,16 @@
                                     style="color:rgb(53, 53, 245);">{{neighborhood.location}}</span>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-md-6" style="font-weight:600; font-size:18px"> Health: <span
+                                    style="color:rgb(53, 53, 245);">{{neighborhood.health_contact}}</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6" style="font-weight:600; font-size:18px"> Police: <span
+                                    style="color:rgb(53, 53, 245);">{{neighborhood.police_contact}}</span>
+                            </div>
+                        </div>
                         <div class="">
                         
                                 <img src="{{neighborhood.photo.url}}" class="img-responsive"
